# mpc

./: Cargo.toml
.github/workflows/: ci.yml  docker_release.yml
deployment/: Dockerfile-gcp  gcp-start.sh
devnet/src/: account.rs  cli.rs  contracts.rs  loadtest.rs  mpc.rs
helios/: Dockerfile
infra/: .gitignore
infra/partner-mainnet/: terraform-mainnet.tfvars
integration-test/: Dockerfile
libs/chain-signatures/contract/: Cargo.toml  readme.md
libs/chain-signatures/crypto-shared/: Cargo.toml
node/: Cargo.toml
node/src/: cli.rs  config.rs  coordinator.rs  hkdf.rs  key_generation.rs  lib.rs  main.rs  metrics.rs  mpc_client.rs  p2p.rs  primitives.rs  sign.rs  sign_request.rs  web.rs
node/src/frost/: dkg.rs  kdf.rs  mod.rs  sign.rs  tests.rs
node/src/indexer/: fake.rs  handler.rs  lib.rs  mod.rs  participants.rs  real.rs  response.rs  tx_sender.rs  types.rs
node/src/keyshare/: gcp.rs  local.rs  mod.rs  permanent.rs  temporary.rs
node/src/providers/: mod.rs
node/src/signing/: debug.rs  queue.rs
node/src/tests/: basic_cluster.rs  benchmark.rs  contract.rs  faulty.rs  mod.rs  multidomain.rs  research.rs  resharing.rs
node/src/validation/: evm.rs  mod.rs  near.rs
pytest/common_lib/: shared.py
scripts/: .env_example
test-configs/here-wallet/: config.yaml  docker-compose.yml  make_sign.py  public_key.py  validate.py  validate_eddsa.py
test-configs/here-wallet/0/: config.yaml
test-configs/here-wallet/1/: config.yaml
test-configs/here-wallet/2/: config.yaml
utils/: Cargo.toml  config-generator.rs  key-migration.rs
(+21 files in other folders)
