[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "config-generator"
path = "config-generator.rs"

[dependencies]
mpc-node = { path = "../node" }
near-crypto = { git = "https://github.com/near/nearcore", rev = "d85bd53a6" }
rand = "0.8.5"
hex = "0.4.3"
anyhow = "1.0.94"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
